# 7bitDI

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
Benchmarks/: CMakeLists.txt  Classes.hpp  Router.cpp  ServiceProviderBenchmark.cpp
Cmake/: 7bitDI.pc.in  (+6 more)
Docs/: CMakeLists.txt  DependencyInjection.md  Doxyfile  Doxyfile.in  README.md  advanced-guides.rst  advanced.rst  api-reference.rst  basic-guides.rst  conf.in.py  conf.py  examples.rst  getting-started.rst  index.rst  installation.rst  license.rst  reference.rst  requirements.txt
Docs/advanced/: external-singleton.rst
Docs/advanced-guides/: building-library.rst  configuring-service-provider.rst  external-singleton.rst  injected-utility-class.rst  keyed-services.rst  register-utility-class.rst  using-aliases.rst  using-factories.rst
Docs/basic-guides/: configuring-service-provider.rst  core-classes.rst  injected-utility-class.rst  injecting-multiple-services.rst  injecting-service-provider.rst  injecting-services.rst  injection-rules.rst  separate-implementation.rst  services-lifetime.rst
Docs/examples/: cli.rst  logger.rst  message-bus.rst  permissions.rst  simple.rst  tester.rst
Docs/getting-started/: basic-usage.rst  external-singleton.rst  injecting-multiple-services.rst  injecting-service-provider.rst  injecting-services.rst  injection-rules.rst  separate-implementation.rst  services-lifetime.rst  using-factories.rst  using-interfaces.rst
Docs/reference/: di.rst
Docs/reference/di/: details.rst  exceptions.rst  injected.rst  iservicefactory.rst  iserviceinstance.rst  iserviceinstanceprovider.rst  iserviceprovider.rst  oneorlist.rst  servicecollection.rst  servicedescriber.rst  servicedescriptor.rst  serviceinstance.rst  servicelifetime.rst  servicelifetimes.rst  serviceprovider.rst  serviceprovideroptions.rst  typeid.rst  utils.rst
Examples/: Basic.cpp  CMakeLists.txt  Cli.cpp  ExternalSingleton.cpp  FactoryFunction.cpp  FactoryFunctions.cpp  InjectingMultipleServices.cpp  InjectingServiceProvider.cpp  InjectionRules.cpp  Interfaces.cpp  InterfacesInjection.cpp  InterfacesMultiple.cpp  LifeTime.cpp  LifeTimeExplanation.cpp  Logger.cpp  MessageBus.cpp  Permissions.cpp  Rules.cpp  Scopes.cpp  ScopesExplanation.cpp  SelfInjection.cpp  ServicesLifeTime.cpp  Simple.cpp  Tester.cpp
Examples/Guides/: ConfiguredServiceProvider.cpp  CoreClasses.cpp  ExternalSingleton.cpp  FactoryFunctions.cpp  InjectedUtilityClass.cpp  InjectingMultipleServices.cpp  InjectingServiceProvider.cpp  InjectingServices.cpp  InjectionRules.cpp  KeyedServices.cpp  RegisterUtilityClass.cpp  SeparateImplementation.cpp  ServiceAliases.cpp  ServicesLifeTime.cpp
SingleHeader/: CMakeLists.txt  SevenBitDI.hpp.in
Source/: CMakeLists.txt  ConfigCheck.hpp  Source.cpp
Tests/: CMakeLists.txt  CircularDependencyGuardTest.cpp  ExternalServiceFactoryTest.cpp  ExternalServiceFcnFactoryTest.cpp  ExternalServiceTest.cpp  RunTests.cpp  SeriviceCollectionTest.cpp  SeriviceProviderScopesTest.cpp  SeriviceProviderTest.cpp  ServiceCollectionTest.cpp  ServiceCtorFactoryTest.cpp  ServiceDescriberTest.cpp  ServiceDescriptorListTest.cpp  ServiceDescriptorTest.cpp  ServiceDescriptorsMapTest.cpp  ServiceFcnFactoryTest.cpp  ServiceInstanceListTest.cpp  ServiceInstancesMapTest.cpp  ServiceListTest.cpp  ServiceOwnerTest.cpp  ServiceProviderScopesTest.cpp  ServiceProviderTest.cpp  ServicesMapTest.cpp  TestTemplate.cpp
Tests/Classes/: BasicInherit.hpp  BasicInheritDesctuction.hpp  BasicTest.hpp  CirularDependency.hpp  ComplexDependencies.hpp
Tests/Containers/: ServiceDescriptorListTest.cpp  ServiceDescriptorsMapTest.cpp  ServiceInstanceListTest.cpp  ServiceInstancesMapTest.cpp
Tests/Core/: ServiceProviderScopesTest.cpp  ServiceProviderTest.cpp
Tests/E2E/: BigLoadTest.cpp  CMakeLists.txt
Tests/E2E/Examples/: expectedTestData.json  expected_test_data.json  test_examples.py
Tests/EndToEnd/: CMakeLists.txt  expectedTestData.json  test_examples.py
Tests/EndToEnd/Examples/: expectedTestData.json  test_examples.py
Tests/Factories/: ExternalServiceFactoryTest.cpp  ServiceFactoryTest.cpp  ServiceFcnFactoryTest.cpp
Tests/Helpers/: CircularDependencyGuardTest.cpp
Tests/Helpers/Classes/: CirularDependency.hpp  Complex.hpp  Dependencies.hpp  Inherit.hpp  InheritDesctuction.hpp  Legion.hpp  MultiInherit.hpp
Tests/Helpers/Mocks/: ServiceInstanceProviderMock.hpp  ServiceProviderMock.hpp
Tests/Helpers/Utilities/: ParamsTest.hpp
Tests/Integration/: AliasTest.cpp  BasicExternalTest.cpp  BasicFactoryTest.cpp  BasicTest.cpp  BasicUniqFactoryTest.cpp  CMakeLists.txt  ComplexInjectionsTest.cpp  InheritanceExternalTest.cpp  InheritanceFactoryTest.cpp  InheritanceTest.cpp  InheritanceUniqFactoryTest.cpp  InjectionTest.cpp  MultiInheritanceExternalTest.cpp  MultiInheritanceFactoryTest.cpp  MultiInheritanceTest.cpp  MultiInheritanceUniqFactoryTest.cpp  RunTests.cpp  ScopeTest.cpp  ServiceProviderScopesTest.cpp  ServiceProviderTest.cpp  TestTemplate.cpp  ThreadSafeTest.cpp
Tests/Integration/Keyed/: AliasKeyedTest.cpp  BasicExternalKeyedTest.cpp  BasicFactoryKeyedTest.cpp  BasicKeyedTest.cpp  BasicUniqFactoryKeyedTest.cpp  InheritanceExternalKeyedTest.cpp  InheritanceFactoryKeyedTest.cpp  InheritanceKeyedTest.cpp  InheritanceUniqFactoryKeyedTest.cpp  MultiInheritanceExternalKeyedTest.cpp  MultiInheritanceFactoryKeyedTest.cpp  MultiInheritanceKeyedTest.cpp  MultiInheritanceUniqFactoryKeyedTest.cpp
Tests/Mocks/: ServiceInstanceProviderMock.hpp  ServiceProviderMock.hpp
Tests/Services/: ExternalServiceTest.cpp  InPlaceServiceTest.cpp  UniquePtrServiceTest.cpp
Tests/Unit/: CMakeLists.txt  OneOrListTest.cpp  ServiceCollectionTest.cpp  ServiceDescriberTest.cpp  ServiceDescriptorTest.cpp  ServiceInstanceTest.cpp  ServiceLifeTimeTest.cpp  ServiceProviderTest.cpp
Tests/Unit/Containers/: ServiceDescriptorListTest.cpp  ServiceDescriptorsMapTest.cpp  ServiceInstanceListTest.cpp  (+1 more)
Tests/Utils/: CheckTest.cpp  CtorParamsNumberTest.cpp  IsCopyCtorTest.cpp  IsInPlaceObject.cpp  IsUniquePtr.cpp  RequireTest.cpp
(+439 files in other folders)
